--- a/TestGen/package.json
+++ b/TestGen/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/ismaylesantos/plataformaTestes#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
